--- a/DevOps/Loki/docker-compose.yaml
+++ b/DevOps/Loki/docker-compose.yaml
@@ -3,6 +3,7 @@ version: "3"
 networks:
   loki:
 
+
 services:
   one:
     ports:
@@ -14,20 +15,18 @@ services:
     volumes:
       - ./loki-config.yaml:/etc/loki/local-config.yaml
       - /var/run/docker.sock:/var/run/docker.sock
-        #- /var/lib/docker/containers:/var/lib/docker/containers
     ports:
       - "3100:3100"
     command: -config.file=/etc/loki/local-config.yaml
     environment:
-      DOCKER_HOST: /Users/qunlinwu/.colima/default/docker.sock
+      DOCKER_HOST: /var/run/docker.sock
     networks:
       - loki
 
   promtail:
     image: grafana/promtail:2.8.0
     volumes:
-      - /var/log:/var/log
-        #- /Users/qunlinwu/.colima/default/docker.sock:/var/run/docker.sock
+      - /var/log:/var/log #- /Users/qunlinwu/.colima/default/docker.sock:/var/run/docker.sock
       - /var/run/docker.sock:/var/run/docker.sock
       - ./promtail-config.yml:/etc/promtail/config.yml
     command: -config.file=/etc/promtail/config.yml
